# Lame3Test

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/lame3test2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lame/: util.h
app/src/main/java/com/example/lame3test2/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lame3test2/: ExampleUnitTest.kt
